# compose-runner

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy.yml  publish_docker.yml  publish_python.yml  test.yml
aws_lambda/: Dockerfile
compose_runner/: cli.py  ecs_task.py  run.py  sentry.py
compose_runner/aws_lambda/: common.py  cost_check_handler.py  log_poll_handler.py  results_handler.py  run_handler.py  status_handler.py
compose_runner/tests/: conftest.py  test_cli.py  test_lambda_handlers.py  test_run.py
compose_runner/tests/cassettes/test_cli/: test_cli.yaml
compose_runner/tests/cassettes/test_lambda_handlers/: test_select_task_size_uses_large_for_montecarlo.yaml  test_select_task_size_uses_standard_for_fdr.yaml
compose_runner/tests/cassettes/test_run/: test_download_bundle.yaml  test_download_bundle_dev_meta_analysis_shape.yaml  test_download_bundle_dev_string_id_shape.yaml  test_incorrect_id.yaml  test_mkdachis_no_corrector_workflow.yaml  test_run_group_comparison_workflow.yaml  test_run_string_group_comparison_workflow.yaml  test_run_workflow.yaml
infra/cdk/: app.py
infra/cdk/stacks/: __init__.py  compose_runner_stack.py  image_repositories_stack.py
infra/cdk/tests/: test_compose_runner_stack.py
pynsc/: cli.py  run.py
pynsc/tests/: test_run.py
pynsc/tests/cassettes/test_run/: test_download_bundle.yaml  test_run_workflow.yaml
