[metadata]
name = pynsc
version = 0.0.1
author = James Kent
author_email = jamesdkent21@gmail.com
url = https://github.com/neurostuff/nsc-runner
description = A package for running neurosynth-compose analyses
long_description = file: README.md
long_description_content_type = text/markdown
keywords = neurosynth-compose, neurosynth, neuroimaging, meta-analysis
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    neurostore-sdk @ git+https://github.com/neurostuff/neurostore-python-sdk.git
    neurosynth-compose-sdk @ git+https://github.com/neurostuff/neurosynth-compose-python-sdk.git
    nimare @ git+https://github.com/jdkent/NiMARE.git@fix/null_analysis

[options.entry_points]
console_scripts = 
    my-example-utility = example.example_module:main

[options.package_data]
* = README.md
