[metadata]
name = pynsc
version = 0.0.1
author = James Kent
author_email = jamesdkent21@gmail.com
url = https://github.com/neurostuff/nsc-runner
description = A package for running neurosynth-compose analyses
long_description = file: README.md
long_description_content_type = text/markdown
keywords = neurosynth-compose, neurosynth, neuroimaging, meta-analysis
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    neurostore-sdk @ git+https://github.com/neurostuff/neurostore-python-sdk.git@main
    neurosynth-compose-sdk @ git+https://github.com/neurostuff/neurosynth-compose-python-sdk.git@main
    nimare==0.2.0rc1
    click

[options.extras_require]
tests = 
    pytest
    pytest-recording
    vcrpy

[options.entry_points]
console_scripts = 
    compose-run = pynsc.cli:cli

[options.package_data]
* = README.md

[flake8]
max-line-length = 99
